<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>vary</artifactId>
    <groupId>cn.luvsa</groupId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>annotation</module>
        <module>core</module>
        <module>html</module>
        <module>jackson</module>
        <module>lang</module>
        <module>lunar</module>
        <module>mate</module>
        <module>struct</module>
    </modules>

    <properties>
        <lombok.version>1.18.24</lombok.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.complie.version>3.10.0</maven.complie.version>
        <maven.source.version>3.2.1</maven.source.version>
        <mapstruct.version>1.5.2.Final</mapstruct.version>
        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
        <org.apache.logging.log4j.version>2.17.2</org.apache.logging.log4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.version>6.0.3</spring.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cn.luvsa</groupId>
                <artifactId>vary-annotation</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.luvsa</groupId>
                <artifactId>vary-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.luvsa</groupId>
                <artifactId>vary-lang</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <optional>true</optional>
            </dependency>

            <!--    对象转换器   -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <!--    对象转换器   -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-jdk8</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <!--    对象转换器   -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${org.apache.logging.log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-to-slf4j</artifactId>
                <version>${org.apache.logging.log4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <distributionManagement>
        <repository>
            <id>yangsiNexus</id>
            <url>http://192.168.0.8:8081/releases</url>
        </repository>


        <snapshotRepository>
            <id>yangsiNexus</id>
            <url>http://192.168.0.8:8081/snapshots</url>
        </snapshotRepository>
    </distributionManagement>


</project>
